src/index.css
* {
  margin: 0;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

body {
  display: block;
}

.app {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
}

.folder-text {
  font-weight: bold;
  color: #cacdcc;
  font-size: 14px;
  font-family: "Barlow", sans-serif;
}

/* .folder-text:hover {
  background-color: rgba(219, 221, 223, 0.1);
  cursor: pointer;
} */

.folder-files-container > * {
  padding-left: 10px;
  margin-bottom: 5px;
}

.main-container {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

.workspace-container {
  display: flex;
  flex-direction: column;
  background-color: #1b1c26;
  flex-grow: 1;
}

.workspace-welcome-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  background-color: #1b1c26;
}

.tabs-container {
  display: flex;
  position: sticky;
  top: 0;
  z-index: 2;
  background-color: #232533;
}

.sidebar-container {
  width: 12em;
  background-color: #232533;
  overflow-y: auto;
}

.tab-container {
  display: flex;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 10px;
  padding-right: 10px;
  border-top: 2px solid #a855f7;
}

.tab-container:hover {
  cursor: pointer;
  background-color: rgba(219, 221, 223, 0.1);
}

.tab-container:hover .tab-close-container {
  visibility: visible;
}

.tab-name {
  text-overflow: ellipsis;
  flex-grow: 1;
  font-family: "Barlow", sans-serif;
  color: #b8b8b8;
  font-size: 13px;
  font-weight: 500;
  max-width: 8em;
}

.tab-close-container {
  /* display: flex;
  justify-content: center;
  align-items: center; */

  width: 14px;
  height: 13px;
  border-radius: 1px;
  padding: 1px;
  cursor: pointer;
  visibility: hidden;
  margin-left: 5px;
}

.tab-close-container:hover {
  background-color: rgba(219, 221, 223, 0.1);
}

.tab-close-button {
  font-size: 12px;
  color: white;
}

.editor-container {
  display: flex;
  flex: 1;
  background-color: #1b1c26;
  overflow: auto;
}

.line-container {
  flex-grow: 1;
  position: relative;
  background-color: #1b1c26;
  cursor: text;
}

.line {
  position: absolute;
  height: 1em;
  width: 50em;
}

.default-line-text {
  position: absolute;
  color: white;
  font-family: "DM Mono", monospace;
  font-size: 13px;
  pointer-events: stroke;
  white-space: pre;
}

.cursor {
  position: absolute;
  width: 1.5px;
  height: 1em;
  background-color: #0078d4;
  pointer-events: none;
}

.sidebar-item {
  font-family: "Barlow", sans-serif;
  font-size: 14px;
  color: #cacdcc;
}

.sidebar-item:hover {
  background-color: rgba(219, 221, 223, 0.1);
  cursor: pointer;
}

.line-number-container {
  width: 3em;
  height: 100%;
  background-color: #1b1c26;
  position: sticky;
}

.highlight {
  position: absolute;
  background-color: rgba(219, 221, 223, 0.1);
  height: 1em;
  border-radius: 2px;
}

span::selection {
  background-color: rgba(219, 221, 223, 0.3);
}

